# lynk

./: .pre-commit-config.yaml
.github/: server-ci.yaml
server/: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
server/src/: __main__.py  application.py  settings.py
server/src/db/: db_dependencies.py  db_lifetime.py
