[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["mslaursen <martin_laursen21@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
ruff = "^0.5.0"
mypy = "^1.10.1"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
